# gtest_cmake_bazel_template

gtest_basic_strcuture_template/: CMakeLists.txt
gtest_basic_strcuture_template/src/: CMakeLists.txt
gtest_basic_strcuture_template/tests/: CMakeLists.txt
gtest_bazel_basic_strcuture_template/: .WORKSPACE.swp  WORKSPACE  gmock.BUILD
gtest_bazel_basic_strcuture_template/src/: BUILD  main.cpp
gtest_bazel_basic_strcuture_template/tests/: BUILD  mathTest.cpp
gtest_cmake_basic_strcuture_template/: CMakeLists.txt
gtest_cmake_basic_strcuture_template/src/: math.cpp  math.hpp
gtest_cmake_basic_strcuture_template/tests/: mathTest.cpp
